gcl (2.6.1-30) unstable; urgency=low

  * Fix rsym generated symbol tables for 64 bit platforms

 -- Camm Maguire <camm@enhanced.com>  Thu,  4 Mar 2004 19:35:38 +0000

gcl (2.6.1-29) unstable; urgency=low

  * Remove implicit dependency on gawk, optimize plt.c a little

 -- Camm Maguire <camm@enhanced.com>  Wed,  3 Mar 2004 16:08:30 +0000

gcl (2.6.1-28) unstable; urgency=low

  * make sure bfd fasload initializes dum.sm.sm_object1 for
    read_fasl_vector
  * When a tagbody contains ccb reference tags, and hence i itself
    marked ccb, mark all the clb tags therein ccb too, as the tagbody
    environment will be consed in c2tagbody-ccb.  FIXME -- review this
    logic carefully
  * fix typoe in o/sfaslbfd.c
  * Add code to unwind redefinitions of the stack supremum in c2expr-top
    (used in c2multiple-value-prog1 and c2multiple-value-call in
    evaluating arguments) on non-local exit
  * Use new temporarry variables holding lisp stack  supremum for lint
  * Eliminate extraneous warning message when allocating fewer pages
    than already allocated
  * Rework internal plt symbol address capture
  * Cleanup sfaslelf compiler warning

 -- Camm Maguire <camm@enhanced.com>  Wed,  3 Mar 2004 00:27:08 +0000

gcl (2.6.1-27) unstable; urgency=low

  * Modify default banner slightly
  * Homebrew plt-like mechanism for ensuring that valid internal
    addresses exist to which undefined symbols in compiled lisp objects
    referring to external shared libraries can be relocated
  * Make configure demand gettext when choosing --enable-locbfd
  * Make sure references to ldb1, a stub conventionally optimized away,
    can be resonled when optimization is turned off
  * completion_matches ->  rl_completion_matches in gcl_readline.d,
    which is what is exported in the headers

 -- Camm Maguire <camm@enhanced.com>  Fri, 27 Feb 2004 23:50:49 +0000

gcl (2.6.1-26) unstable; urgency=low

  * Rework compiler::*ld-libs*, compiler::link, and unixport/makefile to